--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-xcuserdata/
 Carthage/
 Pods/
+
+# Mac OS X
+*.DS_Store
+
+# Xcode
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
