--- a/Pod Sample/Podfile
+++ b/Pod Sample/Podfile
@@ -5,5 +5,6 @@ target 'Pod-sample-app' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 	pod 'CS_iOS_SDK'
+  pod 'CS_ErrorAnalysis'
 
 end
